Possible tiles preview on generation + other refactoring